2005-09-05  John Sullivan  <john@wjsullivan.net>

	* delicious.el (delicious-search-insert-match): Add binding for c
	to delicious search mode, to append the url with no properties to
	the kill ring.
	(delicious-search-copy-url): New command for the above binding.

2005-09-03  John Sullivan  <john@wjsullivan.net>

	* delicioapi.el (delicious-api-get-all): Add optional tag
	argument, which has been available in the server API for a while
	now. Fix indentation.

2005-08-30  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-get-posts-buffer): Return the buffer.
	(delicious-search-add-tags): Don't assume that everyone is using
	~/.delicious for their posts file.
	(delicious-search-delete-tags): Don't assume that everyone is
	using ~/.delicious for their posts file.
	(delicious-search-delete-tags): Forgot to turn off read-only when
	updating the record after making changes.
	(delicious-search-add-tags): Forgot to turn off read-only here
	too.
	(delicious-search-mode-map): Add binding for q to bury the buffer.

2005-08-24  johnsu01  <john@wjsullivan.net>

	* delicious.el (delicious-search-buffer-prep): I guess we'll make
	this buffer read-only after all, after my comical experience of
	typing something by accident and then trying to delete it with
	backspace, which caused the screen to scroll, etc.
	(delicious-search-insert-match): Inhibit read-only while inserting
	matches.
	(delicious-search-buffer-finish): Need to inhibit read-only here
	too.

2005-08-18  John Sullivan  <john@wjsullivan.net>

	* delicious.el (delicious-posts-narrow-by-date): Change name of
	date narrowing function to make namespace room for an interactive
	command to search all posts by date.
	(delicious-posts-matching-date): New function to return all posts
	matching a date.

	* planner-delicious.el (planner-delicious-posts-match-any): Change
	name of date narrowing function.
	(planner-delicious-posts-match-all): Change name of date narrowing
	function.